# cev_template_lib

./: .clang-tidy  .gitmodules  CMakeLists.txt  Makefile  TemplateConfig.cmake.in
.github/workflows/: ci.yaml  lint.yaml
include/: lib.h
lib/: lib.cpp
test/: test.cpp
